Fix overflow sur le menu

--- a/src/layout/menu/__style__/menu.css
+++ b/src/layout/menu/__style__/menu.css
@@ -50,14 +50,12 @@
 
 .list {
     padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     margin: 0;
     position: relative;
     background: var(--main-menu-background);
     height: 100%;
     z-index: calc(var(--z-index-high) + 2);
+    overflow: auto;
 }
 
 .item {
